--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="icon" href="C:\Users\anish\OneDrive\Desktop\technoglossum\css\download.png">
+    <link rel="icon" href="download.png">
     <title>IEEE Student Branch Manipal</title>
-    <link rel="stylesheet" href="C:\Users\anish\OneDrive\Desktop\technoglossum\css\style.css">
+    <link rel="stylesheet" href="style.css">
     <!-- ICONSCOUT CDN -->
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v2.1.6/css/unicons.css">
 
@@ -43,7 +43,7 @@
         </div>
         <div class="header_right">
           <div class="header_right-image">
-            <img class="img1" src="C:\Users\anish\OneDrive\Desktop\technoglossum\IEEE-symbol-1e.png">
+            <img class="img1" src="IEEE-symbol-1e.png">
           </div>
         </div>
       </div>
@@ -111,7 +111,7 @@
       <div class="container events_container">
         <article class="events">
           <div class="events_image">
-            <img src="C:\Users\anish\OneDrive\Desktop\technoglossum\css\image 2.jpg">
+            <img src="image 2.jpg">
           </div>
           <div class="events_info">
             <h4>Technoglossum'22</h4>
@@ -123,7 +123,7 @@
         </article>
         <article class="events">
           <div class="events_image">
-            <img src="C:\Users\anish\OneDrive\Desktop\technoglossum\css\image 3.jpg">
+            <img src="image 3.jpg">
           </div>
           <div class="events_info">
             <h4>TechWeek'22</h4>
@@ -135,7 +135,7 @@
         </article>
         <article class="events">
           <div class="events_image">
-            <img src="C:\Users\anish\OneDrive\Desktop\technoglossum\css\image 4.jpg">
+            <img src="image 4.jpg">
           </div>
           <div class="events_info">
             <h4>Codeathon'22</h4>
@@ -153,31 +153,31 @@
       <div class="swiper-wrapper">
         <article class="testimonial swiper-slide">
           <div class="avatar">
-            <img src="C:\Users\anish\OneDrive\Desktop\technoglossum\css\avatar 1.webp">
+            <img src="avatar 1.webp">
           </div>
           <div class="testimonial_info">
             <h5>Diana Ayi</h5>
             <small>Student</small>
           </div>
           <div class="testimonial_body">
-            My journey at IEEE SBM has been full of challenges and learning.
+           IEEE SBM provided us a great platform for learning and enriching our knowledge.
           </div>
         </article>
         <article class="testimonial swiper-slide">
           <div class="avatar">
-            <img src="C:\Users\anish\OneDrive\Desktop\technoglossum\css\avatar 1.webp">
+            <img src="avatar 1.webp">
           </div>
           <div class="testimonial_info">
             <h5>Peter Thomas</h5>
             <small>Cloud Developer</small>
           </div>
           <div class="testimonial_body">
-            It was my immense fortune to be a part of IEEE SBM.
+            The learning experience at IEEE SBM has been great.
           </div>
         </article>
         <article class="testimonial swiper-slide">
           <div class="avatar">
-            <img src="C:\Users\anish\OneDrive\Desktop\technoglossum\css\avatar 2.jpg">
+            <img src="avatar 2.jpg">
           </div>
           <div class="testimonial_info">
             <h5>Sarah Jane</h5>
@@ -189,26 +189,26 @@
         </article>
         <article class="testimonial swiper-slide">
           <div class="avatar">
-            <img src="C:\Users\anish\OneDrive\Desktop\technoglossum\css\avatar 1.webp">
+            <img src="avatar 1.webp">
           </div>
           <div class="testimonial_info">
             <h5>Harry Potter</h5>
             <small>Coder</small>
           </div>
           <div class="testimonial_body">
-            IEEE SBM provided us a great platform for learning and enriching our knowledge.
+            My journey at IEEE SBM has been full of challenges and learning.
           </div>
         </article>
         <article class="testimonial swiper-slide">
           <div class="avatar">
-            <img src="C:\Users\anish\OneDrive\Desktop\technoglossum\css\avatar 2.jpg">
+            <img src="avatar 2.jpg">
           </div>
           <div class="testimonial_info">
             <h5>Peter Tom</h5>
             <small>Web Developer</small>
           </div>
           <div class="testimonial_body">
-            The learning experience at IEEE SBM has been great.
+            It was my immense fortune to be a part of IEEE SBM.
           </div>
         </article>
       </div>
@@ -296,7 +296,7 @@
     <section class="about_achievements" id="achieve">
       <div class="container about_achievements-container">
         <div class="about_achievements-left">
-          <img src="C:\Users\anish\OneDrive\Desktop\technoglossum\css\achievements 1.webp">
+          <img src="achievements 1.webp">
         </div>
         <div class="about_achievements-right">
           <h1>Achievements</h1>
@@ -307,13 +307,13 @@
           <p>
           <div class="achievements_cards">
             <article class="achievement_card">
-              <img src="C:\Users\anish\OneDrive\Desktop\technoglossum\css\achievement 1.jpg">
+              <img src="achievement 1.jpg">
             </article>
             <article class="achievement_card">
-              <img src="C:\Users\anish\OneDrive\Desktop\technoglossum\css\achievement 2.jpg">
+              <img src="achievement 2.jpg">
             </article>
             <article class="achievement_card">
-              <img src="C:\Users\anish\OneDrive\Desktop\technoglossum\css\achievement 3.jpg">
+              <img src="achievement 3.jpg">
             </article>
           </div>
         </div>
@@ -326,7 +326,7 @@
       <div class="container team_container">
         <article class="team_member">
           <div class="team_member-image">
-            <img src="C:\Users\anish\OneDrive\Desktop\technoglossum\css\member 1.png">
+            <img src="member 1.png">
           </div>
           <div class="team_member-info">
             <h4>Shreyas Shah</h4>
@@ -340,7 +340,7 @@
         </article>
         <article class="team_member">
           <div class="team_member-image">
-            <img src="C:\Users\anish\OneDrive\Desktop\technoglossum\css\member 2.png">
+            <img src="member 2.png">
           </div>
           <div class="team_member-info">
             <h4>Anurag Chowdhury</h4>
@@ -354,7 +354,7 @@
         </article>
         <article class="team_member">
           <div class="team_member-image">
-            <img src="C:\Users\anish\OneDrive\Desktop\technoglossum\css\member 3.png">
+            <img src="member 3.png">
           </div>
           <div class="team_member-info">
             <h4>Mrityunjay Shukla</h4>
@@ -368,7 +368,7 @@
         </article>
         <article class="team_member">
           <div class="team_member-image">
-            <img src="C:\Users\anish\OneDrive\Desktop\technoglossum\css\member 4.png">
+            <img src="member 4.png">
           </div>
           <div class="team_member-info">
             <h4>Kartikeya Tiwari</h4>
@@ -382,7 +382,7 @@
         </article>
         <article class="team_member">
           <div class="team_member-image">
-            <img src="C:\Users\anish\OneDrive\Desktop\technoglossum\css\member 5.png">
+            <img src="member 5.png">
           </div>
           <div class="team_member-info">
             <h4>Mahendra Singh</h4>
@@ -396,7 +396,7 @@
         </article>
         <article class="team_member">
           <div class="team_member-image">
-            <img src="C:\Users\anish\OneDrive\Desktop\technoglossum\css\member 6.png">
+            <img src="member 6.png">
           </div>
           <div class="team_member-info">
             <h4>Tushar Patel</h4>
@@ -410,7 +410,7 @@
         </article>
         <article class="team_member">
           <div class="team_member-image">
-            <img src="C:\Users\anish\OneDrive\Desktop\technoglossum\css\member 7.png">
+            <img src="member 7.png">
           </div>
           <div class="team_member-info">
             <h4>Sujal Acharjya</h4>
@@ -424,7 +424,7 @@
         </article>
         <article class="team_member">
           <div class="team_member-image">
-            <img src="C:\Users\anish\OneDrive\Desktop\technoglossum\css\member 8.png">
+            <img src="member 8.png">
           </div>
           <div class="team_member-info">
             <h4>Kirti Kedia</h4>
@@ -438,7 +438,7 @@
         </article>
         <article class="team_member">
           <div class="team_member-image">
-            <img src="C:\Users\anish\OneDrive\Desktop\technoglossum\css\member 9.png">
+            <img src="member 9.png">
           </div>
           <div class="team_member-info">
             <h4>BV Muskan</h4>
@@ -452,7 +452,7 @@
         </article>
         <article class="team_member">
           <div class="team_member-image">
-            <img src="C:\Users\anish\OneDrive\Desktop\technoglossum\css\member 10.png">
+            <img src="member 10.png">
           </div>
           <div class="team_member-info">
             <h4>Arshia Puthran</h4>
@@ -466,7 +466,7 @@
         </article>
         <article class="team_member">
           <div class="team_member-image">
-            <img src="C:\Users\anish\OneDrive\Desktop\technoglossum\css\member 11.png">
+            <img src="member 11.png">
           </div>
           <div class="team_member-info">
             <h4>Shreen Mohanty</h4>
@@ -480,7 +480,7 @@
         </article>
         <article class="team_member">
           <div class="team_member-image">
-            <img src="C:\Users\anish\OneDrive\Desktop\technoglossum\css\member 12.png">
+            <img src="member 12.png">
           </div>
           <div class="team_member-info">
             <h4>Ankita Veerabahu</h4>
@@ -550,7 +550,7 @@
     </section>
 
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-    <script src="C:\Users\anish\OneDrive\Desktop\technoglossum\main.js"></script>
+    <script src="main.js"></script>
     <script>
       var swiper = new Swiper(".mySwiper", {
         slidesPerView: 1,
